# tweets-db-to-obsidian

./: Cargo.toml  CommonWords.md  JudeaPearlKeywords.md  JudeaPearlWords_afterFiltering.md  JudeaPearlWords_beforeFiltering.md
src/: data.rs  main.rs  utils.rs
src/data/: read.rs  setup.rs
templates/: Conversation.md  Tweet.md  User.md
tweet-tag-vault-backup/.obsidian/: workspace.json
tweet-tag-vault-backup/calendar/: 2017-09-14.md  2018-06-28.md  2018-07-01.md  2018-07-02.md  2018-07-03.md  2018-07-04.md  2018-07-07.md  2018-07-08.md  2018-07-10.md  2018-07-12.md  2018-07-13.md  2018-07-16.md  2018-07-17.md  2018-07-18.md  2018-07-19.md  2018-07-21.md  2018-07-22.md  2018-07-24.md  2018-07-25.md  2018-07-30.md  2018-07-31.md  2018-08-01.md  2018-08-02.md  2018-08-04.md  2018-08-07.md  2018-08-08.md  2018-08-09.md  2018-08-10.md  2018-08-11.md  2018-08-13.md  2018-08-14.md  2018-08-15.md  2018-08-18.md  2018-08-20.md  2018-08-24.md  2018-08-25.md  2018-08-27.md  2018-08-29.md  2018-08-30.md  2018-09-01.md  (+727 more)
tweet-tag-vault-backup/conversations/: conversation-1012187366587392000.md  conversation-1012810575938633729.md  conversation-1013347195527954434.md  conversation-1013399757593640960.md  conversation-1014432493368471552.md  conversation-1015233007135936512.md  conversation-1016047157642604544.md  conversation-1016048487543296001.md  conversation-1017227635733065729.md  conversation-1017683977765654528.md  conversation-1017863887952080896.md  conversation-1017889861397725184.md  conversation-1017894881870483456.md  conversation-1018018357638025217.md  (+2954 more)
(+75619 files in other folders)
