[package]
name = "tweets-db-to-obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.9"
chrono = "0.4.19"
sea-orm = { version = "0.8.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
serde = "1.0.126"
serde_derive = "1"
futures = "0.3.21"
async-recursion = "1.0.0"
tokio = { version = "1.13.0", features = ["full"] }
